fix: mejora de módulos, filtros backend, UX y salud del stack
ARCHIVO: backend (CitaController/Service, PacienteService, WhatsAppController/Service, WhatsappSesionRepository, AutomatizacionController, NotificacionResponse, SecurityConfig); frontend (.gitignore, 32 .js huérfanos borrados, 25 componentes .ts/.html)

PROBLEMA:
- Dropdowns y búsquedas limitados a page-size 100; citas sin filtro por nombre de paciente; /whatsapp/sesiones devolvía array plano sin paginación ni filtros; notificaciones sin filtro estado/evento ni nombre de paciente.
- Frontend: badges con enum inexistente (REALIZADA/CONECTADO/ESPERANDO_QR/DESCONECTADO); botón Recargar de servicios con disabled invertido; dropdown de citas con opción muerta; campos de contraseña inexistentes en usuarios; recordarme/olvidé contraseña muertos en login; conmutadores y mutaciones sin markForCheck (estado desactualizado en la vista); componentes sin spinner; calendario/agente sin CD tras HTTP.
- /api/v1/ping devolvía 403 (no estaba en permitAll) y health.sh reportaba ✗.
- Artefactos .js compilados trackeados en git; verify_ui*.mjs residuales.

CORRECCIÓN:
- Backend: filtro paciente (LIKE nombres/apellidos) en citas; page-size máx 500 en citas/pacientes; listarSesiones paginado con busca/estado + PageImpl + repository findAllByTenantIdOrderByCreatedAtDesc; notificaciones con estado/evento + pacienteNombre; SecurityConfig permitAll GET /api/v1/ping.
- Frontend: enum de estados corregido en sesiones/agenda/calendario (ATENDIDA, DESCONECTADA/CONECTANDO/CONECTADA/ERROR); disabled del Recargar corregido; citas placeholder en vez de opción muerta; usuarios con nuevaPassword en edición; login con puedeEntrar y sin links muertos; reportes con rango desde/hasta; notificaciones con filtros + pacienteNombre; withLoading/markForCheck en todas las mutaciones y CD en calendario/agente/inbox; spinners en 9 vistas; page-size 500.
- Higiene: 32 .js + verify_ui*.mjs fuera del repo; .gitignore ampliado (frontend/src/**/*.js, fronten